# Real_Estate_AI_Agent

./: .env.example  .gitignore  Dockerfile  README.md  data_sources_test_results.json  deploy.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  test_import.py
.github/workflows/: ci.yml
areip/: __init__.py  celery_app.py  config.py
areip/agents/: __init__.py  base.py  coordinator.py  discovery.py  orchestrator.py  synthesis.py  validation.py
areip/api/: __init__.py  main.py
areip/data/: __init__.py  ingestion.py  sources.py
areip/ml/: __init__.py  train.py
areip/utils/: __init__.py  cache.py  database.py  logging.py
areip/workers/: __init__.py  data_ingestion.py
docs/: IMPLEMENTATION.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: areip-dashboard.json
scripts/: demo.py  demo_offline.py  full_demo.py  test_real_data.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_agents.py
